# quadviz-lol

./: quadviz.cabal
src/: ParseFiles.hs  Quadplot.hs  Types.hs
